2003-11-04  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_sfile.c:
	* daemon/liblegacy/opd_kernel.c:
	* libutil/op_cpufreq.c:
	* libutil/op_file.c: a few s/goto/break/
	* libpp/format_output.cpp: padding never used after initialization

2003-11-04  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/comma_list.h: don't accept cumulative behavior
	* libutil++/string_manip.cpp: separate_token() return by value
	* gui/oprof_start.cpp:
	* libopt++/popt_options.cpp:
	* libpp/parse_filename.cpp:
	* libpp/profile_spec.cpp:
	* libutil++/comma_list.h:
	* libutil++/string_filter.cpp:
	* libutil++/string_manip.cpp:
	* libutil++/string_manip.h:
	* libutil++/tests/comma_list_tests.cpp:
	* libutil++/tests/string_manip_tests.cpp: update according
	* libpp/profile_spec.cpp: remove all trace of defunct op_alias

2003-11-04  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/liblegacy/opd_image.c:
	* daemon/liblegacy/opd_image.h:
	* daemon/liblegacy/opd_mapping.c:
	* daemon/liblegacy/opd_mapping.h:
	* daemon/liblegacy/opd_proc.c:
	* gui/oprof_start.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_util.cpp:
	* libop/op_config_24.h:
	* libpp/format_output.cpp:
	* libpp/op_header.cpp:
	* libpp/profile.h:
	* libpp/profile_container.cpp:
	* libpp/profile_spec.cpp:
	* libpp/profile_spec.h:
	* libpp/symbol.h:
	* libpp/symbol_sort.cpp:
	* libutil++/stream_util.cpp:
	* libutil++/stream_util.h:
	* libutil++/utility.h:
	* pp/common_option.cpp:
	* pp/common_option.h:
	* pp/opannotate_options.h:
	* pp/opgprof.cpp:
	* pp/opgprof_options.cpp:
	* pp/opgprof_options.h:
	* pp/opreport_options.cpp:
	* pp/opreport_options.h:
	* pp/populate.cpp: remove some .h dependencies

2003-11-03  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/tests/Makefile.am:
	* libutil++/tests/utility_tests.cpp: new test files convering most of
	  utility.h and op_exception.h

2003-11-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/parse_filename.cpp: avoid repetitive vector::erase(v.begin())