@@ -1,5 +1,10 @@
 2003-11-04  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* libdb/db_manage.c:
+	* libop/op_events.h: -pedantic fix
+
+2003-11-04  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* daemon/opd_sfile.c:
 	* daemon/liblegacy/opd_kernel.c:
 	* libutil/op_cpufreq.c:
